# codingLab

./: .gitignore
00-know-how/css/flexboxItems/: index.html
00-know-how/js/promises/: index.html
artificialIntelligence/deepLearningEngine-C/: eheNN.c
artificialIntelligence/matlab/neuralNetwork/: test.asv  test.m  test3.m
artificialIntelligence/python/00-advanced/: keras_tuner.py  overfit_and_underfit.py  save_and_load.py
artificialIntelligence/python/01-regression/: keras_regression.py  main00-linearRegression.py  main01-linearRegression.py  pureLogisticReg-dataExamineExplore.py  sklearn-decisionTreeRegression.py  sklearn-randomForestRegression.py
artificialIntelligence/python/02-classification/: ML.txt  keras-simple-image-classification.py  keras-simple-text-classification.py  main01-logistic-regression-classification.py  sklearn-decision-tree-classification.py  sklearn-knn-classification.py  sklearn-svm-classification.py  tensorflow-mnist-classification.py  tfhub_text_classification.py
artificialIntelligence/python/04-ann/: main-ann-pytorch.py  main-ann-regression.py
artificialIntelligence/python/05-cnn/: keras-cnn.py
artificialIntelligence/python/06-rnn/: main-lstm.py  main-rnn.py
artificialIntelligence/python/07-transferLearning/: transferLearning-fineTuning.py
artificialIntelligence/python/08-autoencoders/: main-keras-autoencoders.py
artificialIntelligence/python/datasets/: polynomial-regression-dataset.csv
cLab/cMaster/exercises/: 1.txt  15.txt  4.txt  5.txt  6.txt  7.txt
cLab/workshop/deepLearningEngine/: eheNN.h  main.c
cLab/workshop/signalProcessingEngine/: cMaster.depend  cMaster.layout  testLib.h
cppLab/: readme.txt
cppLab/examples/cmakeTest/test07/: CMakeLists.txt
cppLab/examples/embeddedCpp/: uart.h
cppLab/examples/systemDynamics/: main-test.cpp  main.cpp
cppLab/info/04-enum/: main.cpp
cppLab/info/06-struct/: mainStructWithTypedef.cpp
cppLab/info/09-constants/: main.cpp
cppLab/info/14-functions/: main.cpp
cppLab/info/15-arrays/: arrayToFunction.cpp
cppLab/info/17-strings/: mainStrings.cpp
cppLab/info/18-pointers/: mainPointerAritmetic.cpp  mainPointers2.cpp  mainPointersOperatorPriority.cpp  mainPontersInFunctions.cpp
cppLab/info/19-references/: mainReference4.cpp  mainReference5.cpp  mainReference6.cpp
cppLab/know-how/cppSyntax/: struct.txt
cppLab/openCV/starter/: cpp_opencv_test  cpp_opencv_test.cpp
cppLab/projects/particleFireSimulation/: Screen.cpp
cppLab/templates/: info.txt  test5.txt
cppLab/test/: main.cpp  test.cbp  test.depend  test.layout
cppLab/test/include/: Trial.h
cppLab/test/src/: Trial.cpp
cppLab/workshop/cmakeTest/test03/: CMakeLists.txt
cppLab/workshop/cmakeTest/test05/: CMakeLists.txt
cppLab/workshop/cppSource/: CMakeLists.txt
cppLab/workshop/embeddedCpp/: makefile  uart.cpp
cppLab/workshop/particleFireSimulation/: Screen.h  bitShifting.cpp  btShiftingTest  main.cpp
cppLab/workshop/particleSimulator/: CMakeLists.txt  readme.md
cppLab/workshop/particleSimulator/src/: main.cpp
cppLab/workshop/sdl/: readme.txt
cppLab/workshop/stringHeader/: main.cpp
cppLab/workshop/systemDynamics/: CMakeLists.txt
cppLab/workshop/systemDynamics/SystemDynamics/: sysdyn.cpp
cssLab/flexboxItems/: reset.css
cssLab/gidItems/: index.html
cssLab/positioning/positioning-general/: index.html  style.css
cssLab/positioning/positioning-sticky-header/: index.html
experimental/: logisticRegTest.m  readme-cpp.txt
experimental/RestAPI/: app.py  app_flask_restful.py  client.py  client_flask_restful.py  database.py  flask-test.py  readme.md  requirements.txt  updateDB.py
experimental/RestAPI/db/: electronicComponents.db
experimental/RestAPI/templates/: about.html  index.html  new.html  stream.html
experimental/algorithm-Test/floydWarshallAlgorithm/: fwa-test.c  fwa-test4.c
experimental/algorithm-Test/johnsonsAlgorithm/: ja-test2.c
experimental/chatbotProject/: readMe.md  step2-buildSeq2Seq.py
experimental/cppSource/: CMakelists.txt
experimental/cryptoEngine/: coincap_listings.py  coincap_ticker.py
experimental/johnsonsAlgorithm/: ja-test.c
experimental/kinematics/: denavitHartenberg.py  denavitHartenberg_example.py  displacementVector.py  homogenityTransformationMatrix.py  rotation.py  rotationMatrix.py  sixDOF.py
experimental/kivy-androidApp/: controllingEnv.md  kivi-bare-min.py
experimental/logisticReg/: python_lg_alper.py
experimental/objectDetection/detector/: main.ipynb  preparing.ipynb
experimental/regularExpressions/: regExp.txt
experimental/selenium-test/: main.py
experimental/stringHeader/: CMakeLists.txt
experimental/stringHeader/MyString/: myString.hpp
experimental/tensorflow/loadAndPreprocessData/: images.py  readMe.md
experimental/tensorpy/ver-1/: main.py  phNN.py  test.py
experimental/tensorpy/ver-2/: layer.py  phNN.py  phTensor.py
experimental/timeSeriesAnalysis/: basicStatistics.ipynb  correlation.ipynb  workingWith2Ddata.ipynb
experimentalCode/floydWarshallAlgorithm/: fwa-test2.c  fwa-test3.c
experimentalCode/johnsonsAlgorithm/: ja-test4.c
htmlLab/: index.html
jsLAb/ajaxjs/: index.html
jsLAb/ajaxjs/js/: main.js
jsLAb/functions/arrowFunctions/: index.html
jsLAb/nodejs/: dosya.txt  dosya2.txt  exportsDemo.js  fileStream.js  index.html  intro.js  package-lock.json  package.json
jsLAb/promises/: main.js
matLab/Neural Network/: systemd.asv  test3.asv
matLab/Neural Network/gradient descent/: linearRegressin.m
matLab/deepTest/0-notes/: trainingFunctions.txt
matLab/deepTest/1-feeforwardnet/: feedforwardnet_v3.m
matLab/deepTest/2-timeSeries/: narxnet_test_v1.m
matLab/info/syms/: functionTest.m  test.m
matLab/know-how/neuralNetwork/: systemd_1.m  test2.m
matLab/know-how/syms/: infoTest.m
pyLab/deeplearning/: Deep Learning Intro.ipynb
pyLab/deeplearning/.ipynb_checkpoints/: Deep Learning Intro-checkpoint.ipynb
pyLab/models/: timeSeries.ipynb
pyLab/tensorpy/: main.py
signalProcessing/signalProcessingEngine-C/: cMaster.cbp  main.c
systemDynamics/controlTheory/: test.m
w3Lab/html/: jqueryInfo.html
(+827 files in other folders)
